clear button fix

--- a/templates/review.html
+++ b/templates/review.html
@@ -105,7 +105,10 @@
                 <table id="dataframe">
             <thead>
                 <tr>
-                    <th></th>
+                    <th>
+                        <input type="checkbox" id="check-all" class="check-all-checkbox" onchange="checkAllRows()">
+                        <label class="checkbox-label" for="check-all" style="background-color: #4e4e4e;"></label>
+                    </th>
                     <th>User</th>
                     <th>Assistant</th>
                     <th>Action</th>
